# csLabs

./: .gitignore  README.md  global.pri
csapps/AudioBooQer/: AudioBooQer.pro
csapps/AudioBooQer/forms/: waudioplayer.ui  waudioplayer_org_ui  wjobinfo.ui  wmainwindow.ui
csapps/AudioBooQer/include/: chapter.h  chaptermodel.h  job.h  waudioplayer.h  wjobinfo.h  wmainwindow.h
csapps/AudioBooQer/src/: chapter.cpp  chaptermodel.cpp  job.cpp  main.cpp  waudioplayer.cpp  wjobinfo.cpp  wmainwindow.cpp
csapps/SimTool2/core/: core.pro
csapps/SimTool2/doc/: SimCore.tex
csapps/SimTool2/gui/: gui.pro
csapps/SimTool2/plot/: plot.pro
csapps/TaqNG/: TaqNG.pro
csapps/TaqNG/forms/: wmainwindow.ui
csapps/TaqNG/src/: id3v2.cpp  main.cpp  mp3filesmodel.cpp  util.cpp  wmainwindow.cpp  wmainwindow_apic.cpp  wmainwindow_id3v2.cpp  wmainwindow_multi.cpp  wmainwindow_single.cpp  wmainwindow_strip.cpp  wmainwindow_tag.cpp
csapps/VectorCalc/: CMakeLists.txt
csapps/VectorCalc/VectorCalc/: CMakeLists.txt
csapps/VectorCalc/VectorCalc/compiler/: ast.l  ast.y
csapps/VectorCalc/VectorCalc/forms/: wmainwindow.ui
csapps/VectorCalc/VectorCalc/include/ast/: ast.h  ast_basictypes.h  parser.h  printer.h
csapps/VectorCalc/VectorCalc/include/eval/: arithmetic.h  engine.h  environment.h  exception.h  function.h  logical.h  relational.h  result.h  unary.h  variables.h
csapps/VectorCalc/VectorCalc/include/gui/: environmentmodel.h  wlogger.h  wmainwindow.h
csapps/VectorCalc/VectorCalc/include/internal/ast/: parser_p.h
csapps/VectorCalc/VectorCalc/resources/: resources.qrc
csapps/VectorCalc/VectorCalc/src/: main.cpp
csapps/VectorCalc/VectorCalc/src/ast/: ast_aux.cpp  ast_binary.cpp  ast_node.cpp  ast_parser_p.cpp  ast_primary.cpp  ast_unary.cpp  parser.cpp  printer.cpp
csapps/VectorCalc/VectorCalc/src/eval/: arithmetic.cpp  engine.cpp  environment.cpp  exception.cpp  function.cpp  logical.cpp  relational.cpp  result.cpp  unary.cpp  variables.cpp
csapps/VectorCalc/VectorCalc/src/gui/: environmentmodel.cpp  wlogger.cpp  wmainwindow.cpp
csapps/csPDF/: csPDF.pro
csapps/csPDF/forms/: wmainwindow.ui  wpdfcontents.ui  wpdfsearch.ui  wpdfview_old.ui
csapps/csPDF/include/: wmainwindow.h  wpdfcontents.h  wpdfsearch.h  wpdfview.h  wquicksearch.h
csapps/csPDF/src/: main.cpp  wmainwindow.cpp  wpdfcontents.cpp  wpdfsearch.cpp  wpdfview.cpp  wquicksearch.cpp
cslibs/csCore/: csCore.pro
cslibs/csCore/src/: csAlloc_win32.cpp  csAlphaNum.cpp  csFile_win32.cpp  csLimits.cpp  csMain_win32.cpp  csMemory.cpp  csProcess_win32.cpp  csString.cpp  csStringLib.cpp  csStringList.cpp
cslibs/csCore2/: csCore2.pro
cslibs/csCore2/src/: csAlphaNum.cpp  csChar.cpp  csFile_win32.cpp  csLimits.cpp  csProcess_win32.cpp  csString.cpp  csStringLib.cpp  csStringList.cpp
cslibs/csMuPDF/: csMuPDF.pro
cslibs/csMuPDF/src/: csPdfContentsModel.cpp  csPdfDocument.cpp  csPdfPage.cpp  fz_pathext.cpp
cslibs/csPDF/: csPDF.pro
cslibs/csPDF/src/: csPdfContentsModel.cpp  csPdfContentsNode.cpp  csPdfDocument.cpp  csPdfPage.cpp  csPdfSearch.cpp  csPdfSearchResultsModel.cpp  csPdfUtil.cpp  fz_pathext.cpp  fz_render.cpp  fz_util.cpp
cslibs/csPDFSearch/: csPDFSearch.pro
cslibs/csPDFSearch/src/: csPdfSearch.cpp  csPdfSearchUtil.cpp
cslibs/csPDFUI/: csPDFUI.pro
cslibs/csPDFUI/forms/: csPdfUiSearchWidget.ui  csPdfUiTocWidget.ui
cslibs/csPDFUI/src/: csPdfUiDocumentView.cpp  csPdfUiSearchWidget.cpp  csPdfUiTocWidget.cpp
cslibs/csPDFium/: csPDFium.pro
cslibs/csPDFium/src/: csPDFium.cpp  csPDFiumContentsModel.cpp  csPDFiumContentsNode.cpp  csPDFiumDocument.cpp  csPDFiumPage.cpp  util_contents.cpp  util_page.cpp  util_paths.cpp  util_text.cpp
cslibs/csPlot3D/: csPlot3D.pro
cslibs/csPlot3D/resources/: csPlot3D.qrc
cslibs/csPlot3D/src/: csAxisLabel.cpp  csCoordinateBox.cpp  csOpenGLUtil.cpp  csPlot3D.cpp  csSurface.cpp
cslibs/csQt/: csQt.pro
cslibs/csQt/src/: csAbstractTreeItem.cpp  csCollapser.cpp  csColumnResizer.cpp  csFlatTrie.cpp  csFontResizer.cpp  csHighlightingDelegate.cpp  csImageTip.cpp  csItemSearcher.cpp  csMultiToolButton.cpp  csProgressLineEdit.cpp  csQtUtil.cpp  csSubstringHighlighter.cpp  csTableCopier.cpp  csTreeItem.cpp  csTreeModel.cpp  csTrie.cpp
cslibs/csUtil/: CMakeLists.txt  csUtil.pro
cslibs/csUtil/cmake/: FormatOutputName.cmake
cslibs/csUtil/include/config/: csutil_config.h.in
cslibs/csUtil/include/csUtil/: csCharConv.h  csCharUtil.h  csEndian.h  csFileIO.h  csFlags.h  csFormat.h  csILogger.h  csLogger.h  csNamespace.h  csPointer.h  csRawConverter.h  csStringUtil.h  csTextConverter.h  csTypeTraits.h  csutil_config.h
cslibs/csUtil/include/internal/: csutil_internal.h
cslibs/csUtil/src/: csCharConv-fp.cpp  csCharConv.cpp  csFileIO.cpp  csFormat.cpp  csILogger.cpp  csLogger.cpp  csTextConverter.cpp
cslibs/include/csCore/: csAlloc.h  csAlphaNum.h  csChar.h  csFile.h  csLimits.h  csList.h  csListData.h  csMemory.h  csProcess.h  csString.h  csStringLib.h  csStringList.h  csUtil.h  cscore_config.h
cslibs/include/csCore2/: csAlphaNum.h  csChar.h  csFile.h  csLimits.h  csProcess.h  csString.h  csStringLib.h  csStringList.h  csUtil.h  cscore2_config.h  cscore2_features.h
cslibs/include/csMuPDF/: csPdfContentsNode.h  csPdfLink.h  cspdf_config.h
cstest/allocator/: allocator.pro
cstest/test_charconv/: test_charconv.pro
cstest/test_convert/: test_convert.pro
cstest/test_endian/: test_endian.pro
cstest/test_flags/: test_flags.pro
cstest/test_format/: test_format.pro
cstest/test_imagetip/: test_imagetip.pro
cstest/test_plot/: test_plot.pro
cstest/test_rawconverter/: test_rawconverter.pro
cstest/test_stringutil/: test_stringutil.pro
cstest/test_textconverter/: test äuml.txt  test_textconverter.pro
cstest/test_tree/: test_tree.pro
cstest/test_trie/: test_trie.pro
cstest/trans16x16/: trans16x16.pro
cswin32/Audio/: README.md
cswin32/csMenu/: csMenu.def  csMenu.pro
cswin32/csMenu2/: csMenu.pro
cswin32/csParallel/: csParallel.pro
docs/: WindowsAPI.txt  license.tpl.txt
format/: .clang-format
format/src/: FormatTest.cpp
(+334 files in other folders)
